Fixed unreadable text on hover of info a's

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -93,7 +93,7 @@ h1 {
     text-decoration-color: var(--font);
 
     &:hover {
-      color: #444444;
+      background-color: white;
       background-color: var(--font);
     }
   }
